modified text and fixed alignment on media components

--- a/src/components/Media/Media.css
+++ b/src/components/Media/Media.css
@@ -7,3 +7,10 @@
 .media-title {
   text-align: center;
 }
+
+.articles-modules {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
